# capibaraAI

./: Cargo.toml  README.md  diesel.toml  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
app/src/pages/: login.rs
db/: Cargo.toml
db/src/: models.rs  schema.rs
locales/en/: common.json
locales/es/: common.json
migrations/2024-09-22-005357_init-db/: up.sql
migrations/2024-09-25-042756_add_accsess_token/: down.sql  up.sql
migrations/2024-10-09-001830_create_user/: up.sql
server/: Cargo.toml
server/db/: schema.rs
server/src/: auth.rs  main.rs
server/src/api/: auth.rs  oauth.rs
server/src/db/: db.rs  models.rs  schema.rs
src/: app.rs  main.rs
