[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
diesel.workspace = true
dotenvy.workspace = true
oauth2.workspace = true
axum-login.workspace = true
time.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
reqwest.workspace = true
cuid.workspace = true
